--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -218,4 +218,7 @@ clean:
 	-rm -f obj/zerocoin/*.P
 	-rm -f obj/build.h
 
+install-build-software:
+	-sudo apt-get install libssl-dev openssl git miniupnpc libdb-dev libdb++-dev build-essential libgmp-dev autoconf libtool libboost-all-dev libcurl4-openssl-dev git libboost-chrono-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-test-dev libboost-thread-dev libprotobuf-dev protobuf-compiler libqrencode-dev -y
+
 FORCE:
